#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([tree], [0.0.1], [andre.aberer@googlemail.com])
AC_CONFIG_SRCDIR([src/tree.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.


# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.

AC_OUTPUT


AM_INIT_AUTOMAKE

AM_SILENT_RULES([yes])


AC_OUTPUT(Makefile src/Makefile test/Makefile )
